--- a/webmonitor/webmonitor/appsettings.json
+++ b/webmonitor/webmonitor/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "sigfoxdb1": "Server=tcp:sigfoxdb1.database.windows.net,1433;Initial Catalog=sigfoxdb1;Persist Security Info=False;User ID=vmadmin;Password=Superpass987@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
