--- a/webmonitor/webmonitor/webmonitor.csproj
+++ b/webmonitor/webmonitor/webmonitor.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="QRCoder" Version="1.3.5" />
   </ItemGroup>
 
 </Project>
